<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingLeft="16dp"
    android:paddingBottom="0dp">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/infoProjetoHeaderTextInputLayoutNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/infoProjetoHeaderRadioGroup"
        app:layout_constraintVertical_chainStyle="spread">

        <EditText
            android:id="@+id/infoProjetoHeaderEditTextNome"
            android:hint="@string/text_nome_projeto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </android.support.design.widget.TextInputLayout>

    <RadioGroup
        android:id="@+id/infoProjetoHeaderRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/infoProjetoHeaderTextInputLayoutNome">
        
        <RadioButton
            android:id="@+id/infoProjetoHeaderRadioButtonIniciarProgresso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/btn_radio_iniciar_progresso"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/infoProjetoHeaderRadioButtonEmProgresso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/btn_radio_em_progresso"/>

        <RadioButton
            android:id="@+id/infoProjetoHeaderRadioButtonConcluido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/btn_radio_concluido"/>

    </RadioGroup>

    <TextView
        android:id="@+id/infoProjetoHeaderTextViewParticipantes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textAppearance="?android:textAppearance"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/infoProjetoHeaderRadioGroup"
        android:text="@string/text_participantes"/>


</android.support.constraint.ConstraintLayout>