<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="model"
            type="br.com.projeto.sipi.viewmodel.CodigoViewModel" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <TextView
            android:id="@+id/codigoTextViewCodigo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_aviso_codigo"
            android:textAppearance="?android:textAppearance"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/codigoTextInputLayoutCodigo"
            app:layout_constraintVertical_chainStyle="packed"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/codigoTextInputLayoutCodigo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/codigoTextViewCodigo"
            app:layout_constraintBottom_toTopOf="@id/codigoButtonVerificar">

            <EditText
                android:id="@+id/codigoEditTextCodigo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="6"
                android:hint="@string/text_codigo_verificacao"
                app:layout_constraintTop_toBottomOf="@id/codigoTextViewCodigo" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/codigoButtonVerificar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_verificar"
            app:layout_constraintTop_toBottomOf="@id/codigoTextInputLayoutCodigo"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </android.support.constraint.ConstraintLayout>

</layout>